<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nombre" />


    <TextView
        android:id="@+id/tvExplanation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explanation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbRaenira"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/raenira_option" />

        <CheckBox
            android:id="@+id/cbAegon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/aegon_option" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvSelectionInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_decision" />

    <Button
        android:id="@+id/btnKneel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kneel_button" />

</androidx.appcompat.widget.LinearLayoutCompat>

